Set the height of the icon containers to 25vw instead of 20vw. Hoping to alleviate some cramped spacing issues on the top and bottom of the icons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -207,7 +207,7 @@ h1, h3 {
   align-items: center;
   width: 100%;
   background-color: var(--darkgray);
-  height: 20vw;
+  height: 25vw;
 }
 
 .hobby-pic {
@@ -457,7 +457,7 @@ h1, h3 {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 20vw;
+  height: 25vw;
   background-color: var(--darkgray);
 }
 
